Fix overflow img

--- a/src/app/modules/navbar/home/home.component.scss
+++ b/src/app/modules/navbar/home/home.component.scss
@@ -7,7 +7,7 @@
   
 }
 .videoAventura{
-  width: 250px;
+  width: 100%;
   border-radius: 24px; 
 }
 .containerVideo{
@@ -24,11 +24,6 @@
   box-sizing: border-box;
 }
 
-.img-grid{
-  object-fit: cover;
-  width: 100%;
-  height: 100%; 
-}
 .button-grid {
   position: absolute;
   top: 50%;
