--- a/src/app/shared/card/card.component.scss
+++ b/src/app/shared/card/card.component.scss
@@ -1,7 +1,6 @@
 @import 'src/styles.scss';
 
   .card {
-    width: 300px;
     overflow: hidden;
     background-color: $color-primary; 
     color: $color-claro;
