--- a/src/styles.scss
+++ b/src/styles.scss
@@ -58,6 +58,7 @@ img {
   width: 100%;
   height: 100%;
   border-radius: 24px;
+  object-fit: cover;
 }
 
 img:hover {
